ajustes en contacto y colores

--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -43,11 +43,14 @@
     <hr>
 
     <!-- contenido de pagina contacto -->
-   <main>
+    <main>
     <div class="titulo">
         <h1>Contacto</h1>
     </div>
-    
+<br>
+
+
+    <!-- formulario -->
     <div>
         <form >  <!-- action="enviar.png" method="get" enctype="txt/plain" -->
             <section>
@@ -62,9 +65,9 @@
             </div>
             <br>
             <label for="genero"> Genero</label>
-            <input type='radio' name='genero'> Hombre
-            <input type='radio' name='genero'> Mujer
-            <input type='radio' name='genero'> Otro
+            <input class= 'radio' type='radio' name='genero'> Hombre
+            <input class= 'radio' type='radio' name='genero'> Mujer
+            <input class= 'radio' type='radio' name='genero'> Otro
             <br><br>
 
             <div>
@@ -72,8 +75,8 @@
             </div>
             <br>
             <div>
-                <label for="acepto"> Acepto terminos y condiciones</label>
-                <input type="checkbox" id="acepto">
+                <label class= 'radio' for="acepto"> Acepto terminos y condiciones</label>
+                <input class= 'radio' type="checkbox" id="acepto">
 
                 <label for="news"> Deseo recibir promociones</label>
                 <input type="checkbox" id="news">
@@ -85,6 +88,7 @@
         </section>
         </form>
     </div>
+    <!-- fin del formulario -->
 </main>
 
 
